--- a/manuscripts/child-documents/results.Rmd
+++ b/manuscripts/child-documents/results.Rmd
@@ -168,7 +168,7 @@ Figure \@ref(fig:phase-similarity-plots-gamma)A shows the connectivity profiles 
 
 Figure \@ref(fig:phase-similarity-plots-gamma)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the gamma band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-gamma)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small. Table \@ref(tab:phase-similarity-table-gamma) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most) small positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the gamma band was differentiated between individuals across contexts, but with only a slight, negligible influence of individual-dependent factors over and above the influence of stable group-dependent factors.
 
-These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the multitaper method (Figure A\@ref(fig:phase-similarity-plots-hilbert-gamma)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained largely consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure A\@ref(fig:phase-similarity-plots-maximal-gamma)) and the Hilbert transform method (Figures A\@ref(fig:phase-similarity-plots-hilbert-maximal-gamma)), but with slightly more uncertainty in the estimates. This increased uncertainty resulted in the direction of the between sessions, between sessions and within states, and between sessions and states contrasts to become unresolved. However, the difference in interpretation between the maximal model and reduced model results here was minor: The maximal model simply requires the qualification that the differences in functional connectome similarity within and between participants most compatible with our data for these contrasts, given the background model, also included the possibility of (essentially) zero difference.
+These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the multitaper method (Figure A\@ref(fig:phase-similarity-plots-hilbert-gamma)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained largely consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure A\@ref(fig:phase-similarity-plots-maximal-gamma)) and the Hilbert transform method (Figure A\@ref(fig:phase-similarity-plots-hilbert-maximal-gamma)), but with slightly more uncertainty in the estimates. This increased uncertainty resulted in the direction of the between sessions, between sessions and within states, and between sessions and states contrasts to become unresolved. However, the difference in interpretation between the maximal model and reduced model results here was minor: The maximal model simply requires the qualification that the differences in functional connectome similarity within and between participants most compatible with our data for these contrasts, given the background model, also included the possibility of (essentially) zero difference.
 
 \newpage
 
